# Theme-Editor

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/stores/: theme.ts
