[package]
name = "theme-editor"
version = "1.0.0"
description = "轻量级主题文本编辑器"
authors = ["Uased & Pigladder"]
license = "MIT"
repository = "https://github.com/Pigladder/Theme-Editor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "theme_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"